parser.pegjs
{
	require('coffee-script')
	cls = require('./lib/classes')
	Template = cls.Template
	expression = cls.expression
}
uriTemplate 
  = pieces:(nonexpression / expression)* { return new Template(pieces) }

expression
  = "{" op:op params:paramList "}" { return expression(op, params) }

op
  = [/;:.?&+#] / ""

pathExpression
  = "{/"

paramList
  = hd:param rst:("," p:param { return p; })* { rst.unshift(hd); return rst; }

param
  = letter:[a-zA-Z] chars:[a-zA-Z0-9_]* cut:substr? listMarker:"*"? e:extension?
    { return {
      name: letter + chars.join(""),
      explode: listMarker,
      cut: cut,
			extended: e
    } }

substr
  = ":" digits:[0-9]+ { return parseInt(digits.join('')) }

nonexpression
	= chars:[^{]+ { return chars.join(""); }

extension
  = "(" chars:[^)]+ ")" { return chars.join("") }
